// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Toolbar Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="toolbar"
  >
    <div
      className="tookbar-content"
    >
      <h2
        className="title color-base"
      >
        Home
      </h2>
    </div>
    <nav
      className="menu"
    >
      <button
        aria-label="menu"
        className="button color-base is-round"
        id="menu"
        onClick={[Function]}
      >
        <span
          className="icon color-base size-sm"
        >
          <svg
            fill="currentColor"
            height={21}
            viewBox="0 0 21 21"
            width={21}
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fillRule="evenodd"
              transform="translate(2 2)"
            >
              <path
                d="M8.5 9.5c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1zm-4 0c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1zm8 0c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1z"
              />
            </g>
          </svg>
        </span>
      </button>
    </nav>
  </div>
</div>
`;

exports[`Storyshots Molecules/Toolbar Default With On Back 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="toolbar"
  >
    <div
      className="tookbar-content"
    >
      <button
        aria-label="back-button"
        className="button color-base is-round"
        id="back-button"
        onClick={[Function]}
      >
        <span
          className="icon color-base size-sm"
        >
          <svg
            height={21}
            stroke="currentColor"
            viewBox="0 0 21 21"
            width={21}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.5 14.5l-4-4 4-4"
              fill="none"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </span>
      </button>
      <h2
        className="title color-base"
      >
        Home
      </h2>
    </div>
    <nav
      className="menu"
    >
      <button
        aria-label="menu"
        className="button color-base is-round"
        id="menu"
        onClick={[Function]}
      >
        <span
          className="icon color-base size-sm"
        >
          <svg
            fill="currentColor"
            height={21}
            viewBox="0 0 21 21"
            width={21}
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fillRule="evenodd"
              transform="translate(2 2)"
            >
              <path
                d="M8.5 9.5c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1zm-4 0c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1zm8 0c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1z"
              />
            </g>
          </svg>
        </span>
      </button>
    </nav>
  </div>
</div>
`;
